Feature/dd 2927 upgrade backend (#102)
* Spring boot 4

* Use restclient instead of webclient

* lombok annotation processor